--- a/e-commerce.ipynb
+++ b/e-commerce.ipynb
@@ -27,9 +27,9 @@
     "\n",
     "4. Сколько у каждого из пользователей в среднем покупок в неделю (по месяцам)? Не стоит забывать, что внутри месяца может быть не целое количество недель. Например, в ноябре 2021 года 4,28 недели. И внутри метрики это нужно учесть.\n",
     "\n",
-    "5. Используя pandas, проведи когортный анализ пользователей. В период с января по декабрь выяви когорту с самым высоким retention на 3й месяц.\n",
+    "5. Используя pandas, проведем когортный анализ пользователей. В период с января по декабрь выявим когорту с самым высоким retention на 3й месяц.\n",
     "\n",
-    "6. Часто для качественного анализа аудитории использую подходы, основанные на сегментации. Используя python, построй RFM-сегментацию пользователей, чтобы качественно оценить свою аудиторию. В кластеризации можешь выбрать следующие метрики: R - время от последней покупки пользователя до текущей даты, F - суммарное количество покупок у пользователя за всё время, M - сумма покупок за всё время."
+    "6. Часто для качественного анализа аудитории используют подходы, основанные на сегментации. Используя python, построим RFM-сегментацию пользователей, чтобы качественно оценить свою аудиторию. В кластеризации выберем следующие метрики: R - время от последней покупки пользователя до текущей даты, F - суммарное количество покупок у пользователя за всё время, M - сумма покупок за всё время."
    ]
   },
   {
@@ -1025,7 +1025,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5. Используя pandas, проведи когортный анализ пользователей. В период с января по декабрь выяви когорту с самым высоким retention на 3й месяц."
+    "### 5. Используя pandas, проведем когортный анализ пользователей. В период с января по декабрь выявим когорту с самым высоким retention на 3й месяц."
    ]
   },
   {
@@ -1899,7 +1899,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6. Часто для качественного анализа аудитории используют подходы, основанные на сегментации. Используя python, построить RFM-сегментацию пользователей, чтобы качественно оценить свою аудиторию."
+    "### 6. Часто для качественного анализа аудитории используют подходы, основанные на сегментации. Используя python, построим RFM-сегментацию пользователей, чтобы качественно оценить свою аудиторию."
    ]
   },
   {
